# tiny-parquet

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PARQUET_WASM_ROADMAP.md  README.md  package.json
_test/: bench.mjs  burst.mjs  perf.mjs  test.mjs  test_dict.mjs
historical/: README v0.2 pre-dict.md
parquet-reader/: Cargo.toml
parquet-reader/src/: lib.rs
parquet-writer/: Cargo.toml  test.mjs
parquet-writer/src/: lib.rs
src/: index.d.ts  index.js  reader.d.ts  reader.js  writer.d.ts  writer.js
wasm/: reader.wasm  writer.wasm
