[package]
name = "parquet-reader"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
parquet2 = { version = "0.17", default-features = false, features = ["snappy"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Link-time optimization
strip = true      # Strip debug info
codegen-units = 1 # Max optimization
panic = "abort"   # Smaller binary
