[package]
name = "parquet-flake"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
parquet2 = { version = "0.17", default-features = false, features = ["snappy"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Link-time optimization
strip = true      # Strip debug info
codegen-units = 1 # Max optimization
panic = "abort"   # Smaller binary
